
New:
  + Emoji 13:
    1FAA0 Plunger, 1FA9A Carpentary Saw, 1FA9B Screwdriver, 1FAA1 Sewing Needle, 
    1FAA4 Mouse Trap, 1FAA7 Placard, 1FA9E Mirror, 1FA83 Boomerang, 1FAA3 Bucket, 
    1FAB6 Feather, 1FAB4 Potted Plant, 1FA9D Hook, 1FAA6 Headstone
  + Doe
  + Texas Flag
  + Esperanto Flag
  + Narwhal, Beluga, Porpoise by @kriskowal
  + No Handshaking
  + Dejected Face
  
Fix:
  * Replaced Dolphin by @kriskowal
  * Replaced Whale and Spouting Whale with blue whales by @kriskowal
  * Moved and renamed Selina Bauer’s Whale and spouting Whale to Orca and Spouting Orca in private use area
  * signs and align Aries, Gemini, Virgo, Scorpio, Capricorn, Libra, Sagittarius, Om,
    Orthodox Cross, Wheel of Dharma, Taurus, Cancer, Leo, Aquarius, Pisces, Ophiuchus
  * Flags:
       Portugal, Afghanistan, Laos, Turkey, Kazakhstan, Maldivesl, Jersey, New Caledonia, Niger, Antarctica, Mayotte, Hong Kong, Aruba
  * contour in Cat
  * contour in Victory Hand
  * redesign Llama
  * structure in Classical Building
  * tongue in Hot Face
  * drool in Drooling Face
  * Cross Mark
  * Question Mark, White Question Mark
  * contour in Infinity
  * Lab Coat
  * all Prohibited Signs
  * Exploding Head by @taralynnconnelly
  * bed in Bed and Person in Bed
  * skullcap in  Person With Skullcap

--------------------------------------------------------------------------------

🦠 OpenMoji 12.2 - 17 March 2020

Many improvements, fixes and new OpenMojis:
👉 First batch of Emoji 13, ca. 1/3 of all new ones
👉 Unicode Emoji 12.1 complete, new gender neutral persons and person-roles
👉 New extras-openmoji: healthcare
👉 New extras-openmoji: climate-environment

New:
+ Emoji 13:
  1FAC0 anatomical heart, 1FAC1 lungs, 1FAC2 people hugging,
  1F3F3 FE0F 200D 26A7 FE0F transgender flag, 1F43B polar bear,
  1FAD0 blueberries, 1FAD3 flatbread, 1FAD4 tamale, 1FA85 piñata,
  1FA98 long drum, 1F972 smiling face with tear, 1F978 disguised face,