@@ -237,3 +237,4 @@ E2D9,extras-openmoji,climate-environment,nuclear protection,"radiation, suit, ga
 E2DA,extras-openmoji,climate-environment,atom bomb,"nuclear, radioactive, nuke, WW2",Robin Kurz,2020-02-18
 E380,extras-openmoji,symbols,no handshaking,"hygiene, agreement, virus, meeting, spread, germs",Julian Grüneberg,2020-04-05
 E149,extras-openmoji,objects,tardis,"time machine, doctor who, police booth, police box",Alexander Müller,2020-04-19
+E381,extras-openmoji,symbols,web syndication,"feed, rss, atom feed, podcast, subscribe, web feed",Alexander Müller,2020-04-19
