@@ -3382,6 +3382,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 ,E281,extras-openmoji,smileys-emotion,incredulous face,,"incredulous, disbelief, shocked",Mariella Steeb,2018-04-18,,,,,,
 ,E282,extras-openmoji,smileys-emotion,dejected face,,"sigh, ._., pensive, disappointed",Carlin MacKenzie,2020-01-10,,,,,,
 ,E380,extras-openmoji,symbols,no handshaking,,"hygiene, agreement, virus, meeting, spread, germs",Julian Grüneberg,2020-04-05,,,,,,
+,E381,extras-openmoji,symbols,web syndication,,"feed, rss, atom feed, podcast, subscribe, web feed",Alexander Müller,2020-04-19,,,,,,
 ,E1C0,extras-openmoji,technology,wireframes,,,Baris Camli,2018-04-18,,,,,,
 ,E1C1,extras-openmoji,technology,code editor,,,Baris Camli,2018-04-18,,,,,,
 ,E1C2,extras-openmoji,technology,autonomous car,,,Baris Camli,2018-04-18,,,,,,
