@@ -57511,6 +57511,23 @@
     "order": ""
   },
   {
+    "emoji": "",
+    "hexcode": "E381",
+    "group": "extras-openmoji",
+    "subgroups": "symbols",
+    "annotation": "web syndication",
+    "tags": "",
+    "openmoji_tags": "feed, rss, atom feed, podcast, subscribe, web feed",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-04-19",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
     "emoji": "",
     "hexcode": "E1C0",
     "group": "extras-openmoji",
